--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,17 @@
-ado-py==0.0.7
-aiodns==2.0.0
-aiogram==2.11.2
-aiohttp==3.7.4
-async-timeout==3.0.1
-attrs==20.3.0
-autopep8==1.5.4
-Babel==2.9.0
-cchardet==2.1.7
-certifi==2020.11.8
-cffi==1.14.4
-idna==2.10
-multidict==5.0.2
-pycares==3.1.1
-pycodestyle==2.6.0
-pycparser==2.20
-python-dotenv==0.15.0
-pytz==2020.4
-toml==0.10.2
-typing-extensions==3.7.4.3
-ujson==4.0.1
-uvloop==0.14.0
-yarl==1.6.3
+aiogram==2.19
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+asyncpg==0.25.0
+attrs==21.4.0
+Babel==2.9.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+databases==0.5.5
+frozenlist==1.3.0
+greenlet==1.1.2
+idna==3.3
+multidict==6.0.2
+pytz==2021.3
+SQLAlchemy==1.4.31
+yarl==1.7.2
